--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ theme: jekyll-theme-hacker
 
 title: [Story of preak4freaktrick]
 description: [Comming Soon]
+show_downloads: [false]
+google_analytics: []
